# foreex

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  REUSE.toml
.github/workflows/: main.yaml  main.yml
src/: main.c  renderer.c  renderer.h
tools/: Containerfile  install-ubuntu-build-deps.sh
